[#1] Mandatory Checkstyle, fixed violations
Mandatory Checkstyle rules now performed at verify stage. If any style
guide violations are present build fails. Also fixed existing style
violations that were present in the code.

The mandatory rule set may be seen as the set of all undisputed rules.
It is largely based on the Google Java Style Guide, with the exception
of indentation (4 spaces) and maximum line length (120).

--- a/cloudkeeper-executors/cloudkeeper-drmaa_1.0/pom.xml
+++ b/cloudkeeper-executors/cloudkeeper-drmaa_1.0/pom.xml
@@ -28,6 +28,16 @@
                     <target>1.4</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>checkstyle</id>
+                        <phase/>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
