--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,8 @@
         <maven.dependency.version>2.10</maven.dependency.version>
         <maven.dependency.tree.version>2.1</maven.dependency.tree.version>
         <maven.pmd.version>3.0.1</maven.pmd.version>
-        <maven.checkstyle.version>2.11</maven.checkstyle.version>
+        <maven.checkstyle.version>2.17</maven.checkstyle.version>
+        <checkstyle.version>6.15</checkstyle.version>
         <maven.surefire.version>2.17</maven.surefire.version>
         <maven.failsafe.version>${maven.surefire.version}</maven.failsafe.version>
         <maven.plugin.annotations.version>3.3</maven.plugin.annotations.version>
@@ -410,6 +411,26 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>checkstyle</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <failOnViolation>true</failOnViolation>
+                            <consoleOutput>true</consoleOutput>
+                            <configLocation>src/main/config/mandatory-checkstyle.xml</configLocation>
+                            <suppressionsLocation>src/main/config/suppressions.xml</suppressionsLocation>
+                            <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.8</source>
@@ -476,6 +497,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>${maven.checkstyle.version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>${checkstyle.version}</version>
+                        </dependency>
+                    </dependencies>
                     <!-- Executions of the plugin are defined in the "analyze" profile. -->
                 </plugin>
                 <plugin>
