[#28] Mandatory checkstyle for test sources
Previously, the test sources were not covered by the mandatory
checkstyle introduced with issue #1. This is now fixed.

--- a/pom.xml
+++ b/pom.xml
@@ -423,6 +423,7 @@
                             <failOnViolation>true</failOnViolation>
                             <consoleOutput>true</consoleOutput>
                             <configLocation>src/main/config/mandatory-checkstyle.xml</configLocation>
+                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                             <suppressionsLocation>src/main/config/suppressions.xml</suppressionsLocation>
                             <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                         </configuration>
