[#25] Remove pre-Java 8 legacies
Mostly: Use CompletableFuture in public API instead of Scala's Future.

--- a/cloudkeeper-core/cloudkeeper-testkit/pom.xml
+++ b/cloudkeeper-core/cloudkeeper-testkit/pom.xml
@@ -38,19 +38,14 @@
         </dependency>
 
         <dependency>
+            <groupId>net.florianschoppmann.java</groupId>
+            <artifactId>java-futures</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.11</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
         </dependency>
 
         <dependency>
