--- a/cloudkeeper-core/cloudkeeper-interpreter/pom.xml
+++ b/cloudkeeper-core/cloudkeeper-interpreter/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
 
         <dependency>
+            <groupId>net.florianschoppmann.java</groupId>
+            <artifactId>java-futures</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <optional>true</optional>
