--- a/cloudkeeper-executors/cloudkeeper-executors-testkit/pom.xml
+++ b/cloudkeeper-executors/cloudkeeper-executors-testkit/pom.xml
@@ -61,13 +61,22 @@
         </dependency>
 
         <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.11</artifactId>
+            <groupId>net.florianschoppmann.java</groupId>
+            <artifactId>java-types</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.florianschoppmann.java</groupId>
+            <artifactId>java-futures</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.11</artifactId>
         </dependency>
 
         <dependency>
